<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello World!"
            android:width="1sp"
            android:textSize="26sp"
            android:layout_x="18px"
            android:layout_y="18px"
            android:textColor="@color/black"
            android:background="@color/white"
            android:lines="9"

            android:gravity="left"
            android:textStyle="bold"


            android:layout_weight="1"
            android:elevation="4dp"

             />
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/button_7"
                android:text="@string/Button_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="35sp"
                android:layout_x="107px"
                android:layout_y="190px"
                android:background="@color/blue"
                android:textColor="@color/black"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/button_8"
                android:text="@string/Button_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="35sp"
                android:layout_x="107px"
                android:layout_y="190px"
                android:textColor="@color/black"
                android:background="@color/blue"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/button_9"
                android:text="@string/Button_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="35sp"
                android:layout_x="107px"
                android:layout_y="190px"
                android:background="@color/blue"
                android:textColor="@color/black"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/button_4"
                android:text="@string/Button_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="35sp"
                android:layout_x="107px"
                android:layout_y="190px"
                android:textColor="@color/black"
                android:background="@color/blue"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/button_5"
                android:text="@string/Button_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="35sp"
                android:layout_x="107px"
                android:layout_y="190px"
                android:textColor="@color/black"
                android:background="@color/blue"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/button_6"
                android:text="@string/Button_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="35sp"
                android:layout_x="107px"
                android:layout_y="190px"
                android:textColor="@color/black"
                android:background="@color/blue"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/button_1"
                android:text="@string/Button_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="35sp"
                android:layout_x="107px"
                android:layout_y="190px"
                android:textColor="@color/black"
                android:background="@color/blue"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/button_2"
                android:text="@string/Button_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="35sp"
                android:layout_x="107px"
                android:layout_y="190px"
                android:textColor="@color/black"
                android:background="@color/blue"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/button_3"
                android:text="@string/Button_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="35sp"
                android:layout_x="107px"
                android:layout_y="190px"
                android:textColor="@color/black"
                android:background="@color/blue"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/button_Clear"
                android:text="@string/Button_Clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="35sp"
                android:layout_x="107px"
                android:layout_y="190px"
                android:textColor="@color/red"
                android:background="@color/blue"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/button_0"
                android:text="@string/Button_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="35sp"
                android:layout_x="107px"
                android:textColor="@color/black"
                android:background="@color/blue"
                android:layout_y="190px"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/button_EXE"
                android:text="@string/Button_EXE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="35sp"
                android:textColor="@color/red"
                android:background="@color/blue"
                android:layout_x="107px"
                android:layout_y="190px"
                android:layout_weight="1"/>
        </TableRow>

    </TableLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>